@@ -1,0 +1,50 @@
+#!/bin/ksh
+#
+# CDDL HEADER START
+#
+# The contents of this file are subject to the terms of the
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
+#
+# You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
+# or http://www.opensolaris.org/os/licensing.
+# See the License for the specific language governing permissions
+# and limitations under the License.
+#
+# When distributing Covered Code, include this CDDL HEADER in each
+# file and include the License file at usr/src/OPENSOLARIS.LICENSE.
+# If applicable, add the following below this CDDL HEADER, with the
+# fields enclosed by brackets "[]" replaced with your own identifying
+# information: Portions Copyright [yyyy] [name of copyright owner]
+#
+# CDDL HEADER END
+#
+#
+# Copyright 2010 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
+#
+# ident	"%Z%%M%	%I%	%E% SMI"
+
+. /lib/svc/share/smf_include.sh
+
+case "$1" in
+'start')
+    PLUGIN_CMD="$(svcprop -p plugin/command $SMF_FMRI)"
+    if [ $? -ne 0 ] ; then
+        echo "Unable to obtain plugin invocation command"
+        exit $SMF_EXIT_ERR_CONFIG
+    fi
+
+	if [ ! -x $PLUGIN_CMD ] ; then
+	    echo "\"$PLUGIN_CMD\" is not an executable path"
+	    exit $SMF_EXIT_ERR_CONFIG
+	fi
+	;;
+*)
+        echo "Usage: $0 { start }"
+	exit $SMF_EXIT_ERR_FATAL 
+        ;;
+esac
+
+exit $SMF_EXIT_OK
+
