@@ -1,3 +1,12 @@
+2010-02-04 Niall Power - <niall.power@sun.com>
+
+	* lib/svc/method/time-slider-plugin: Added.
+	  Provides simple, generic plugin start method.
+	* var/svc/manifest/application/time-slider-plugin.xml:
+	  Added comments for time-slider-plugin method, advising
+	  that non trivial plugin instances should provide their
+	  own specific methods.
+
 2010-02-03 Niall Power - <niall.power@sun.com>
 
 	* var/svc/manifest/application/time-slider.xml:
